// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addDependencies should add country-info dependencies to the package.json 1`] = `
"{
  \\"name\\": \\"test-name\\",
  \\"dependencies\\": {
    \\"@graphql-mesh/cli\\": \\"0.79.3\\",
    \\"@graphql-mesh/runtime\\": \\"0.44.31\\",
    \\"@graphql-mesh/soap\\": \\"0.16.0\\",
    \\"@graphql-mesh/utils\\": \\"0.42.6\\",
    \\"graphql\\": \\"16.6.0\\"
  },
  \\"devDependencies\\": {}
}
"
`;

exports[`addDependencies should add fake-api dependencies to the package.json 1`] = `
"{
  \\"name\\": \\"test-name\\",
  \\"dependencies\\": {
    \\"@graphql-mesh/cli\\": \\"0.79.3\\",
    \\"@graphql-mesh/json-schema\\": \\"0.35.33\\",
    \\"@graphql-mesh/plugin-mock\\": \\"0.0.37\\",
    \\"@graphql-mesh/runtime\\": \\"0.44.31\\",
    \\"@graphql-mesh/utils\\": \\"0.42.6\\",
    \\"graphql\\": \\"16.6.0\\"
  },
  \\"devDependencies\\": {}
}
"
`;

exports[`addDependencies should add javascript-wiki dependencies to the package.json 1`] = `
"{
  \\"name\\": \\"test-name\\",
  \\"dependencies\\": {
    \\"@graphql-mesh/cli\\": \\"0.79.3\\",
    \\"@graphql-mesh/openapi\\": \\"0.33.34\\",
    \\"@graphql-mesh/runtime\\": \\"0.44.31\\",
    \\"@graphql-mesh/utils\\": \\"0.42.6\\",
    \\"graphql\\": \\"16.6.0\\"
  },
  \\"devDependencies\\": {}
}
"
`;

exports[`addDependencies should add movies dependencies to the package.json 1`] = `
"{
  \\"name\\": \\"test-name\\",
  \\"dependencies\\": {
    \\"@graphql-mesh/cli\\": \\"0.79.3\\",
    \\"@graphql-mesh/neo4j\\": \\"0.20.34\\",
    \\"@graphql-mesh/runtime\\": \\"0.44.31\\",
    \\"@graphql-mesh/utils\\": \\"0.42.6\\",
    \\"graphql\\": \\"16.6.0\\"
  },
  \\"devDependencies\\": {}
}
"
`;

exports[`addDependencies should add rfam dependencies to the package.json 1`] = `
"{
  \\"name\\": \\"test-name\\",
  \\"dependencies\\": {
    \\"@graphql-mesh/cli\\": \\"0.79.3\\",
    \\"@graphql-mesh/mysql\\": \\"0.17.30\\",
    \\"@graphql-mesh/runtime\\": \\"0.44.31\\",
    \\"@graphql-mesh/utils\\": \\"0.42.6\\",
    \\"graphql\\": \\"16.6.0\\"
  },
  \\"devDependencies\\": {}
}
"
`;

exports[`addDependencies should add stackexchange dependencies to the package.json 1`] = `
"{
  \\"name\\": \\"test-name\\",
  \\"dependencies\\": {
    \\"@graphql-mesh/cli\\": \\"0.79.3\\",
    \\"@graphql-mesh/openapi\\": \\"0.33.34\\",
    \\"@graphql-mesh/runtime\\": \\"0.44.31\\",
    \\"@graphql-mesh/utils\\": \\"0.42.6\\",
    \\"graphql\\": \\"16.6.0\\"
  },
  \\"devDependencies\\": {}
}
"
`;

exports[`addDependencies should add star-wars-api dependencies to the package.json 1`] = `
"{
  \\"name\\": \\"test-name\\",
  \\"dependencies\\": {
    \\"@graphql-mesh/cli\\": \\"0.79.3\\",
    \\"@graphql-mesh/graphql\\": \\"0.31.31\\",
    \\"@graphql-mesh/runtime\\": \\"0.44.31\\",
    \\"@graphql-mesh/utils\\": \\"0.42.6\\",
    \\"graphql\\": \\"16.6.0\\"
  },
  \\"devDependencies\\": {}
}
"
`;

exports[`addDependencies should add trippin dependencies to the package.json 1`] = `
"{
  \\"name\\": \\"test-name\\",
  \\"dependencies\\": {
    \\"@graphql-mesh/cli\\": \\"0.79.3\\",
    \\"@graphql-mesh/odata\\": \\"0.20.31\\",
    \\"@graphql-mesh/runtime\\": \\"0.44.31\\",
    \\"@graphql-mesh/utils\\": \\"0.42.6\\",
    \\"graphql\\": \\"16.6.0\\"
  },
  \\"devDependencies\\": {}
}
"
`;
